# Synchronized-Image-Viewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cursor.cpp  cursor.h  main.cpp  message_man.cpp  message_man.h  setup.cpp  setup.h  suppr.txt  view_area.cpp  view_area.h  window.cpp  window.h
.run/: client.run.xml  server.run.xml
message_man/: CMakeLists.txt  client.cpp  client.h  message_man.cpp  message_man.h  write_client.cpp  write_client.h
